Revert "fix: title overlap the border - callout in event type (#1023)"
This reverts commit 46002d227d691554ce01a3fac8998d368a0a53d8.

--- a/src/theme/bootstrap-override/bootstrap-italia/_callout.scss
+++ b/src/theme/bootstrap-override/bootstrap-italia/_callout.scss
@@ -26,11 +26,11 @@ div.callout {
 
     .text-line {
       position: relative;
+      top: 0.8rem;
       width: 100%;
       min-width: 3rem;
       height: 2px;
       flex: 1;
-      top: 1rem;
       background-color: $color-border-secondary;
     }
   }
